--- a/style.css
+++ b/style.css
@@ -48,7 +48,20 @@ header {
   height: 110px;
 
   display: flex;
+  justify-content: space-between;
   align-items: center;
+}
+.burger {
+  display: none;
+  flex-direction: column;
+  gap: 8px;
+  cursor: pointer;
+}
+.lines {
+  width: 35px;
+  height: 3px;
+  border-radius: 2px;
+  background-color: #fff;
 }
 nav {
   width: 100%;
@@ -60,15 +73,19 @@ nav ul {
   height: 100%;
   list-style: none;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   padding: 0 20px;
+}
+nav ul li {
+  font-size: 24px;
+  position: relative;
 }
 .btn {
   display: block;
   text-decoration: none;
   color: white;
-  font-size: 24px;
+
   font-weight: bold;
   transition: all 0.2s ease-in-out;
 }
@@ -77,6 +94,31 @@ nav ul {
   text-shadow: 0 0 15px blue;
   transform: translateY(-3px);
 }
+/* @media screen and (max-width: 1350px) {
+  nav ul li {
+    font-size: 18px;
+  }
+} */
+
+.dropdown-content {
+  width: max-content;
+  display: none;
+  flex-direction: column;
+  position: absolute;
+  left: -15px;
+  padding: 15px;
+  gap: 15px;
+  background: var(--gradient-color);
+}
+.dropdown-content a {
+  color: black;
+}
+/* .dropdown-content a {
+} */
+nav ul li:hover .dropdown-content,
+.dropdown-content:hover {
+  display: flex;
+}
 
 /* მაინი */
 main {
@@ -84,6 +126,7 @@ main {
   display: flex;
   gap: 50px;
 }
+
 /* ასაიდი */
 #search {
   width: 435px;
@@ -94,6 +137,12 @@ main {
   font-family: "BPG Nino Mtavruli", sans-serif;
   font-size: larger;
   font-weight: 600;
+}
+aside iframe {
+  width: 45vw;
+  max-width: 740px;
+  min-width: 435px;
+  height: 470px;
 }
 /* სექცია */
 h1 {
@@ -123,6 +172,26 @@ h1 {
 }
 .more:hover {
   box-shadow: 0 0 5px;
+}
+
+@media screen and (max-width: 900px) {
+  .burger {
+    display: flex;
+  }
+  main {
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+  }
+  nav {
+    display: none;
+  }
+  aside {
+    width: 100%;
+  }
+  #search {
+    width: 100%;
+  }
 }
 
 /* ფუტერი */
