--- a/style.css
+++ b/style.css
@@ -10,36 +10,21 @@
   );
   --hover-color: yellowgreen;
 }
+
 * {
   margin: 0;
   box-sizing: border-box;
 }
+
 body {
   width: 100%;
   height: 100vh;
   color: var(--main-font-color);
-  background-color: var(--main-bg-color);
-  padding: 0 20px;
+  background: #1d242f;
+  background: rgba(29, 36, 47, 1);
 
   font-family: "BPG Nino Mtavruli", sans-serif;
-}
-
-/* ფონი */
-.bg-wraper {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  overflow: hidden;
-}
-.background-svg {
-  width: 100%;
+  padding: 30px;
 }
 
 /* ჰედერი */
@@ -49,29 +34,36 @@ header {
 
   display: flex;
   align-items: center;
-}
-nav {
-  width: 100%;
-  height: 60px;
-
-  background: var(--gradient-color);
-}
-nav ul {
-  height: 100%;
-  list-style: none;
-  display: flex;
   justify-content: space-between;
-  align-items: center;
-  padding: 0 20px;
+  /* padding: 20px; */
 }
+
+nav {
+  display: flex;
+  align-items: center;
+  /* padding: 20px; */
+}
+
+nav ul {
+  width: 100%;
+  /* height: 100%; */
+  display: flex;
+  align-items: center;
+  gap: 20px;
+
+  list-style: none;
+  padding: 0;
+}
+
 .btn {
   display: block;
   text-decoration: none;
   color: white;
-  font-size: 24px;
+  /* font-size: 18px; */
   font-weight: bold;
   transition: all 0.2s ease-in-out;
 }
+
 .btn:hover {
   color: var(--hover-color);
   text-shadow: 0 0 15px blue;
@@ -82,67 +74,96 @@ nav ul {
 main {
   margin-top: 80px;
   display: flex;
+  justify-content: space-between;
   gap: 50px;
 }
-/* ასაიდი */
 #search {
-  width: 435px;
-  height: 45px;
+  min-width: 400px;
+  width: 100%;
+  height: 50px;
   margin-bottom: 40px;
   padding-left: 10px;
 
   font-family: "BPG Nino Mtavruli", sans-serif;
   font-size: larger;
   font-weight: 600;
+  border-radius: 6px;
 }
+
 /* სექცია */
 h1 {
-  font-size: 45px;
-  line-height: 53px;
+  font-size: 36px;
+  line-height: 120%;
   margin-bottom: 25px;
+  color: #8485ff;
+  color: rgb(132, 133, 255);
 }
-.main-section h3 {
-  font-size: 24px;
+.main-section {
+  min-width: 540px;
 }
+
 .main-section ul {
   list-style-type: square;
   padding-left: 24px;
 }
+
 .main-section li {
   font-size: 21px;
 }
+
 .main-section li::marker {
   font-size: 30px;
 }
+
 .more {
   display: inline-block;
   padding: 15px;
-  margin-top: 30px;
-
-  background: var(--gradient-color);
+  margin: 30px 0;
+  background: #8485ff;
+  background: rgba(132, 133, 255, 1);
+  border-radius: 6px;
 }
+
 .more:hover {
   box-shadow: 0 0 5px;
 }
 
+aside {
+  width: 100%;
+}
+
+#video-player {
+  min-width: 740px;
+  width: 100%;
+  min-height: 470px;
+  height: 100%;
+}
+
 /* ფუტერი */
 footer {
+  position: relative;
+  bottom: 0;
   display: flex;
   justify-content: space-between;
   font-size: larger;
-  height: 50px;
-  padding: 50px 0;
+  /* height: 50px; */
+  padding: 50px 30px;
+  margin-top: 50px;
+  border-top: 1px solid white;
 }
+
 .mail a {
   color: #fff;
   text-decoration: none;
 }
+
 .mail a:hover,
 .bi:hover {
   text-shadow: 0 0 15px blue;
   color: var(--hover-color);
   cursor: pointer;
 }
+
 .icons {
   display: flex;
   gap: 10px;
